--- a/h5Base/css/布局/layout.html
+++ b/h5Base/css/布局/layout.html
@@ -8,15 +8,15 @@
   <title>Document</title>
   <style>
     .div1 {
-      width: 300px;
-      height: 300px;
+      width: 600px;
+      height: 600px;
       position: relative;
       background: red;
     }
 
     .div2 {
-      width: 30px;
-      height: 30px;
+      /* width: 30px;
+      height: 30px; */
       position: absolute;
       left: 0;
       right: 0;
