--- a/h5Base/css/布局/粘连布局.html
+++ b/h5Base/css/布局/粘连布局.html
@@ -42,7 +42,7 @@
         mian <br/>
         mian <br/> 
           
-        <!-- mian <br/>
+        mian <br/>
         mian <br/>
         mian <br/>
         mian <br/>
@@ -74,7 +74,7 @@
         mian <br/>
         粘连布局: 
             1、主题内容多的时候(超过手机屏幕高度))) footer在内容最底部
-            2、主题内容少(未超过手机屏幕高度) footer在屏幕底部 -->
+            2、主题内容少(未超过手机屏幕高度) footer在屏幕底部
        </div>
        <div class="footer">
         footer
