--- a/h5Base/js高级程序设计/1.html
+++ b/h5Base/js高级程序设计/1.html
@@ -6,10 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+      div{
+        width: 100px;
+        height: 100px;
+        border: 10px;
+        box-sizing: border-box;
+      }
+    </style>
 </head>
-
 <body>
+  <div>xxxxxxx</div>
     <script src='./test.js'></script>
+    <script>
+      // window.print()
+      setTimeout(()=>{
+        window.print()
+      },100)
+      // let dom = document.querySelector('div')
+      // dom.onclick = function(){
+      //   // alert('1')
+      // //  let a =  confirm('1')
+      //  let a =  prompt('1')
+      //   console.log(a)
+      // }
+    </script>
+
 </body>
 
 </html>
