--- a/advanced/css世界/盒尺寸四大家族/三角形.html
+++ b/advanced/css世界/盒尺寸四大家族/三角形.html
@@ -6,9 +6,9 @@
   <title>Document</title>
   <style>
     div{
-      width:0;
+      height:10px;
       border:10px solid;
-      border-color:red transparent transparent;
+      border-color:transparent transparent  transparent red;
     }
   </style>
 </head>
