--- a/css面试汇总/test.html
+++ b/css面试汇总/test.html
@@ -4,42 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-</head>
-<body>
   <style>
-    .s{
-      border: 1px solid green;
-      margin: 100px;
-    }
     div{
-      width: 100px;
-      height: 100px;
+      width: 1rem;
+      height: 1rem;
       background: red;
     }
-    .div1{
-      margin-top: 50px;
-    }
-    .div2{
-      margin: 10px;
-    }
-    .s1{
-      margin: 100px;
-      width: 100px;
-      height: 100px;
-      border: 1px solid red;
-    }
-    article{
-      overflow: hidden;
-    }
   </style>
-  <article>
-  <section class="s1">
-  s1
-  </section>
-  <section class="s">
-    <div class='div1'></div>
-    <div class='div2'></div>
-  </section>
-</article>
+</head>
+<body>
+  <div>
+    1
+  </div>
+  <script>
+    // 1rem  =  16px 
+    // let rs =document.documentElement.style.fontSize/window.innerWidth*16/640
+    document.documentElement.style.fontSize = document.documentElement.clientWidth/10+'px'
+    console.log(window.innerWidth,document.documentElement.clientWidth)
+  </script>
 </body>
 </html>
