--- a/h5Base/js高级程序设计/2.html
+++ b/h5Base/js高级程序设计/2.html
@@ -5,10 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    .div{
+      /* display: inline-block; */
+      width: 100px;
+      height: 100px;
+      background: red;
+      /* border: 10px solid red; */
+      margin: 100px;
+      /* overflow: hidden; */
+    }
+    .div2{
+      width: 100px;
+      height: 100px;
+      background: springgreen;
+      /* margin: 100px; */
+
+    }
+    section{
+    background: tan;
+    /* margin: 100px; */
+    overflow:hidden
+    }
+    .wrapper{
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
-  22222222
-  <script src='./test.js'></script>
-
+  <section>
+    <div class="div">1</div>
+    <div class="wrapper">
+      <div class="div">2</div>
+    </div>
+  </section>
+  <div class="div2">3</div>
 </body>
 </html>
